--- a/v2/index.html
+++ b/v2/index.html
@@ -172,7 +172,7 @@
 
   <img src="https://64.media.tumblr.com/0b571c66fabc9738d55087b0f1da8aea/2bf19378b6f44c2b-dc/s540x810/5cb7071f80e4c3ccbbb4c75b8cdeb7970dc57dab.gifv" alt="britney-quiz" width="600" height=500 style=" position: absolute; top: 3700px; right: 50px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
-  <img src="/v2/barbiebrush.png" alt="britney-quiz" width="400" height=300 style=" position: absolute; top: 4200px; right: 500px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="barbiebrush.png" alt="britney-quiz" width="400" height=300 style=" position: absolute; top: 4200px; right: 500px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
   <img src="https://img1.picmix.com/output/stamp/normal/7/6/0/1/941067_74dcb.gif" alt="britney-quiz" width="300" height=200 style=" position: absolute; top: 800px; right: 1400px;">
 
@@ -181,11 +181,11 @@
   <img src="https://img1.picmix.com/output/stamp/normal/7/6/0/1/941067_74dcb.gif" alt="britney-quiz" width="300" height=200 style=" position: absolute; top: 1000px; right: 1400px;">
 
 
-  <img src="/v2/barbieland.jpg" alt="britney-quiz" width="300" height=200 style=" position: absolute; top: 4200px; right: 50px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="barbieland.jpg" alt="britney-quiz" width="300" height=200 style=" position: absolute; top: 4200px; right: 50px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
   <!-- <img src="/v2/BARBIE ICEREAM.jpg" alt="britney-quiz" width="300" height=200 style=" position: absolute; top: 4000px; right: 700px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;"> -->
 
-  <img src="/v2/barbieken.jpg" alt="britney-quiz" width="400" height=300 style=" position: absolute; top: 4500px; left: 100px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="barbieken.jpg" alt="britney-quiz" width="400" height=300 style=" position: absolute; top: 4500px; left: 100px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
 
   <img src="https://64.media.tumblr.com/9c78eba3aed2dbe6eaca6fda5a0d3c09/tumblr_o9iiqfLwBm1vx777ao1_400.gifv" alt="heart-gems" width="400" height=400 style=" position: absolute; top: 100px; right: 50px;">
@@ -251,7 +251,7 @@
   <img src="https://img1.picmix.com/output/stamp/normal/0/7/9/5/2665970_61768.gif" alt="buzzfeed" width="600" height=600 style=" position: absolute; top: 2000px; left: 1000px;">
   
   
-  <img src="/v2/britney-quiz.png" alt="britney-quiz" width="400" height=500 style=" border-top: ridge 9px #fff; border-bottom: ridge 4px rgb(86, 86, 86);border-right: ridge 4px #4a4a4a;border-left: ridge 4px #fff; position: absolute; top: 500px; right: 50px;">
+  <img src="britney-quiz.png" alt="britney-quiz" width="400" height=500 style=" border-top: ridge 9px #fff; border-bottom: ridge 4px rgb(86, 86, 86);border-right: ridge 4px #4a4a4a;border-left: ridge 4px #fff; position: absolute; top: 500px; right: 50px;">
 
   <p style="top:2500px; right:700px; padding: 10px;"> So some of the stories you’ll see on Spotify look like this:</p>
 
@@ -278,19 +278,19 @@
 
   <img src="https://media.tenor.com/F9MMkmWeWb0AAAAe/out-bye.png" alt="britney-quiz" width="600" height=500 style=" position: absolute; top: 5700px; right: 600px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
-  <img src="/v2/fashionfairytale.gif" alt="britney-quiz" width="500" height=400 style=" position: absolute; top: 3900px; left: 150px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="fashionfairytale.gif" alt="britney-quiz" width="500" height=400 style=" position: absolute; top: 3900px; left: 150px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
   <img src="https://64.media.tumblr.com/6379b40e4a36490c58cae94a474babce/tumblr_o2idih49Md1u69veko1_1280.gifv" alt="britney-quiz" width="500" height=400 style=" position: absolute; top: 4000px; left: 500px; ">
 
-  <img src="/v2/buzz 1.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 4500px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="buzz 1.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 4500px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
-  <img src="/v2/buzz 2.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 4900px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="buzz 2.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 4900px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
-  <img src="/v2/buzz 3.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 5200px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="buzz 3.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 5200px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
-  <img src="/v2/buzz 4.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 5600px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="buzz 4.png" alt="britney-quiz" width="600" height=200 style=" position: absolute; top: 5600px; right: 0px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
-  <img src="/v2/mic ad.png" alt="britney-quiz" width="300" height=300 style=" position: absolute; top: 4900px; left: 200px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
+  <img src="mic ad.png" alt="britney-quiz" width="300" height=300 style=" position: absolute; top: 4900px; left: 200px; border-top: ridge 8px #fff; border-bottom: ridge 8px rgb(86, 86, 86);border-right: ridge 8px #4a4a4a;border-left: ridge 8px #fff;">
 
 
 
